--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Version 2.0beta4
+	Added Opera support
 Version 2.0beta3
 	Added MAP id attribute support apart from existing MAP name usage.
 	Added function getMapId().
