--- a/wiki/Setup.wiki
+++ b/wiki/Setup.wiki
@@ -1,4 +1,5 @@
 #summary How to set up the imgmap library.
+#labels Featured,Phase-Implementation
 
 = Introduction =
 
@@ -96,3 +97,28 @@ form_container: document.getElementById('form_container'),
 //all the above containers can be undefined or null if you dont want to use them
 
 }}}
+
+After all lets see then how to set up an instance, with some of the parameters defined above:
+
+{{{
+var myimgmap = new imgmap({
+mode : "editor",
+button_container: document.getElementById('button_container'),
+imgroot: 'example1_files/',
+buttons : ['add','delete','preview','html'],
+custom_callbacks : {
+	'onHtml' : function() {htmlShow();}//your own function to call here
+},
+pic_container: document.getElementById('pic_container'),//elements on your page
+html_container: document.getElementById('html_container'),
+status_container: document.getElementById('status_container'),
+form_container: document.getElementById('form_container'),
+bounding_box : true
+});
+}}}
+
+Tada. We are done.
+
+= Interacting with the editor =
+
+to be written later
