Edited wiki page through web user interface.

--- a/wiki/TinyMCE_setup.wiki
+++ b/wiki/TinyMCE_setup.wiki
@@ -14,3 +14,4 @@
 Notes:
   * You may only add extra buttons to your tiny instance if you are using the advanced theme
   * In some cases TinyMCE includes editor_plugin_src.js instead of editor_plugin.js. Since this file was not part of some earlier versions, you can simply copy editor_plugin.js as editor_plugin_src.js in your plugin directory.
+  * Please do NOT use the files copied from the examples/ directory, use the plugin_tinymce{{{*}}}.zip files for deployment.
