Edited wiki page through web user interface.

--- a/wiki/FCKEditor_setup.wiki
+++ b/wiki/FCKEditor_setup.wiki
@@ -5,3 +5,5 @@
 
 A detailed description can be found [http://martinezdelizarrondo.com/fckplugins/imgmap/docs/install.html here].
 
+ATTENTION!
+If you use FCK version older than 2.5, please try to upgrade to the latest version! An imagemap related issue was fixed in version 2.5. Read more here: [http://dev.fckeditor.net/ticket/1496]
