--- a/wiki/TinyMCE_setup.wiki
+++ b/wiki/TinyMCE_setup.wiki
@@ -3,15 +3,16 @@
 
 = TinyMCE 2.x and 3.x =
 
-  # copy files to plugins/imgmap/
+  # for TinyMCE 2.x copy files from plugin_tinymce{x}.zip to {yourtinyinstance}/plugins/imgmap/
+  # for TinyMCE 3.x copy files from plugin_tinymce3.{x}.zip to {yourtinyinstance}/plugins/imgmap/
   # set up your instance in the tinyMCE.init() method to use the plugin, like:
    `plugins : "table,save,advhr,advimage,imgmap,...",`
   # set up your instance to use the imgmap button, for example:
    `theme_advanced_buttons3_add : "emotions,iespell,...,imgmap",`
-  # you might need to add:
+  # you will most likely need to add:
    `extended_valid_elements: "img[usemap|class|src|border=0|alt|title|hspace|vspace|width|height|align|onmouseover|onmouseout|name],map[id|name],area[shape|alt|coords|href|target]",`
 
 Notes:
   * You may only add extra buttons to your tiny instance if you are using the advanced theme
   * In some cases TinyMCE includes editor_plugin_src.js instead of editor_plugin.js. Since this file was not part of some earlier versions, you can simply copy editor_plugin.js as editor_plugin_src.js in your plugin directory.
-  * Please do NOT use the files copied from the examples/ directory, use the plugin_tinymce{{{*}}}.zip files for deployment.
+  * Please do NOT use the files copied from the examples/ directory, use the plugin_tinymce{x}.zip files for deployment, where {x} marks the imgmap build number.
