--- a/wiki/Joomla_setup.wiki
+++ b/wiki/Joomla_setup.wiki
@@ -5,10 +5,22 @@
 
 Everything below was tried out with Joomla 1.5.4. By default Joomla uses TinyMCE 2.x so the basics are the same as for the [TinyMCE_setup].
 
+UPDATE: Newer Joomla use TinyMCE 3.x and the installation is much simpler. Read steps below.
+
 Joomla can also work with FCKeditor, please read [Joomla_FCK_setup].
 
 
 = Details =
+
+== New Joomla (Version 1.5.12 for example) ==
+
+  # copy files from plugin_tinymce3{x}.zip to {yourjoomlainstance}/plugins/editors/tinymce/jscripts/tiny_mce/plugins/imgmap/
+  # go to Joomla admin/Plugin manager/Editor - TinyMCE/Advanced Parameters, and enter `imgmap` in both Custom plugin and Custom button input fields. Make sure functionality parameter is set to extended.
+  # Launch up your article editor, and you are ready to use the plugin.
+
+
+
+== Older Joomla (Version 1.5.4 for example) ==
 
   # copy files from plugin_tinymce{x}.zip to {yourjoomlainstance}/plugins/editors/tinymce/jscripts/tiny_mce/plugins/imgmap/
   # edit {yourjoomlainstance}/plugins/editors/tinymce.xml, after 'directionality' add lines:
