--- a/trunk/changelog
+++ b/trunk/changelog
@@ -4,8 +4,9 @@
 
 Version 2.2
  * Updated excanvas to r3 - should solve IE8 problems
- * Added Example 9 with ExtJs integration, thanks to Colin Bell
- * Fixed Issue 21: Example 1 and online editor supports background change
+ * Added Example with ExtJs integration, thanks to Colin Bell
+ * New callback event: onDblClickArea
+ * Fixed Issue 21: Example 1 and soon online editor supports background change
  * Fixed Issue 23: Possible to click on area in highlighter mode and fire a callback (follow the link)
  * Added Xinha plugin both as an example and a separate plugin
  * Examples got renamed to reflect what they do, plugins got separate packages, top level folder is now included in them.    
