--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -3,6 +3,15 @@
 
 = Changelog =
 
+Version 2.2
+ * Updated excanvas to r3 - should solve IE8 problems
+ * Added Example with ExtJs integration, thanks to Colin Bell
+ * New callback event: onDblClickArea
+ * Fixed Issue 21: Example 1 and soon online editor supports background change
+ * Fixed Issue 23: Possible to click on area in highlighter mode and fire a callback (follow the link)
+ * Added Xinha plugin both as an example and a separate plugin
+ * Examples got renamed to reflect what they do, plugins got separate packages, top level folder is now included in them.    
+
 Version 2.1
  * Separated most drawing-specific and gui-specific codes. This means easier integration with ANY kind of user interface.
  * GUI specific functions went to default_interface.js 
