Edited wiki page Loading_and_editing_maps through web user interface.

--- a/wiki/Loading_and_editing_maps.wiki
+++ b/wiki/Loading_and_editing_maps.wiki
@@ -1,4 +1,6 @@
+#summary How to reload and edit existing maps?
 #labels Phase-Implementation
+
 = How to reload and edit existing maps? =
 
 Often you want to save your created maps in a database, then load it back and be able to edit it again.
