Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,14 +1,31 @@
 #summary Frequently Asked Questions.
-#labels Phase-Deploy
 
-= Introduction =
+= Which browsers are supported? =
 
-Add your content here.
+Everything newer than Firefox 1.5, Safari 3, Opera 9 and IE 6, including the versions mentioned.
 
+= Which WYSIWYG editors are supported? =
 
-= Details =
+Imgmap offers plugins for:
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+ * (F)CKEditor
+ * TinyMCE
+ * Xinha
+
+= Which javascript frameworks are supported? =
+
+Imgmap does not depend on any frameworks. It works as good with jQuery than with extJS or any other frameworks. An extjs integrated example can be found in the examples of the downloadable zip.
+
+= Do u have a version which is integrated with www.xstandard.com editor? =
+
+No
+
+= How would you get the code of the imagemap you created?  =
+
+Press the blue "HTML" button
+
+= How to reload and edit existing maps? =
+
+See: http://code.google.com/p/imgmap/wiki/Loading_and_editing_maps
+
+= Which browsers are supported? =
